--- a/wellness.html
+++ b/wellness.html
@@ -88,11 +88,9 @@
 
   <main>
     <article>
-      <!-- 
-        - #HERO
-      -->
+      <!--- #HERO-->
       <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('./assets/images/hero-bg.png')">
+        >
         <div class="container">
           <div class="hero-content">
             <p class="hero-subtitle">
@@ -111,7 +109,7 @@
           </div>
 
           <div class="hero-banner">
-            <img src="./assets/images/wellness-banner.jpg" width="660" height="753" alt="hero banner" class="w-100">
+            <img src="./assets/images/wellness-banner.webp" width="660" height="753" alt="hero banner" class="w-100">
             <h2 class="abs-img abs-img-1">Rejuvenate 🧘🏻‍♀️</h2>           
             <h2 class="abs-img abs-img-2" >Relax 💆🏻‍♀️</h2>          
           </div>
@@ -139,7 +137,7 @@
             <div class="wrapper">
               <div class="about-coach">
                 <figure class="coach-avatar">
-                  <img src="./assets/images/coach.JPG" width="80" loading="lazy" alt="Trainer">
+                  <img src="./assets/images/Health-coach.webp" width="80" loading="lazy" alt="Trainer">
                 </figure>
 
                 <div class="container">
@@ -516,7 +514,7 @@
     <!-- FOOTER -->
   <footer class="footer">
 
-    <div class="section footer-top bg-dark has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
+    <div class="section footer-top bg-dark has-bg-image">
       <div class="container">
 
         <div class="footer-brand">
