--- a/wellness.html
+++ b/wellness.html
@@ -152,7 +152,8 @@
 
           </div> 
         
-        <img src="./assets/blog/Health-Wellness.webp" alt="Health and Wellness certificate">
+
+        <img src="./assets/blog/Health-Wellness.webp" alt="Health and Wellness certificate" style="margin-top: 20px;">
         </div>  
       </section>
 
