--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
 
   <footer class="footer">
 
-    <div class="section footer-top bg-dark has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
+    <div class="section footer-top bg-dark has-bg-image">
       <div class="container">
 
         <div class="footer-brand">
