--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 
   <footer class="footer">
 
-    <div class="section footer-top bg-dark has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
+    <div class="section footer-top bg-dark has-bg-image">
       <div class="container">
 
         <div class="footer-brand">
