--- a/fitness.html
+++ b/fitness.html
@@ -28,10 +28,8 @@
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
     rel="stylesheet">
 
-  <!-- 
-    - preload images
-  -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+  <!--- preload images-->
+  <link rel="preload" as="image" href="./assets/images/hero-banner.webp">
   <link rel="preload" as="image" href="./assets/images/hero-circle-one.png">
   <link rel="preload" as="image" href="./assets/images/hero-circle-two.png">
   <link rel="preload" as="image" href="./assets/images/heart-rate.svg">
@@ -45,7 +43,7 @@
   <header class="header" data-header>
     <div class="container">
       <a href="treatments.html" class="logo">
-        <img src="./assets/images/class-yoga-massage.png" alt="">
+        <img src="./assets/images/class-yoga-massage.png" width="65" height="65" alt="yoga logo">
         <span class="span">Treatments</span>
       </a>
 
