--- a/index.html
+++ b/index.html
@@ -8,22 +8,13 @@
   <meta name="description" content="Experience ultimate relaxation at Let's relax, Stockholm's best massage therapy and affordable deep tissue massage. Book your personalized session today for relaxation and a healthier lifestyle! Relaxation massage near me Stockholm">
   <title>Relaxation & Wellness in Stockholm | Let's relax</title>
 
-  <!-- 
-    - favicon
-  -->
-  <!-- 
-    - favicon
-  -->
+  <!--- favicon-->
   <link rel="shortcut icon" href="favicon-relax.png" type="image/svg+xml">
 
-  <!-- 
-    - custom css link
-  -->
+  <!--- custom css link-->
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!-- 
-    - google font link
-  -->
+  <!--- google font link-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -31,10 +22,8 @@
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
     rel="stylesheet">
 
-  <!-- 
-    - preload images
-  -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+  <!--- preload images-->
+  <link rel="preload" as="image" href="./assets/images/hero-banner.webp">
   <link rel="preload" as="image" href="./assets/images/hero-circle-one.png">
   <link rel="preload" as="image" href="./assets/images/hero-circle-two.png">
   <link rel="preload" as="image" href="./assets/images/heart-rate.svg">
@@ -46,7 +35,7 @@
   <header class="header" data-header>
     <div class="container">
       <a href="treatments.html" class="logo">
-        <img src="./assets/images/class-yoga-massage.png" alt="">
+        <img src="./assets/images/class-yoga-massage.png" width="65" height="65" alt="yoga logo">
         <span class="span">Treatments</span>
       </a>
 
