--- a/treatments.html
+++ b/treatments.html
@@ -31,7 +31,7 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+  <link rel="preload" as="image" href="./assets/images/hero-banner.webp">
   <link rel="preload" as="image" href="./assets/images/hero-circle-one.png">
   <link rel="preload" as="image" href="./assets/images/hero-circle-two.png">
   <link rel="preload" as="image" href="./assets/images/heart-rate.svg">
@@ -45,7 +45,7 @@
   <header class="header" data-header>
     <div class="container">
       <a href="treatments.html" class="logo">
-        <img src="./assets/images/class-yoga-massage.png" alt="">
+        <img src="./assets/images/class-yoga-massage.png" width="65" height="65" alt="yoga logo">
         <span class="span">Treatments</span>
       </a>
 
