--- a/about.html
+++ b/about.html
@@ -110,31 +110,12 @@
 
           <div class="hero-banner">
             <img  src="./assets/images/profile.jpg" width="660" height="753" alt="hero banner" class="w-100 profile-about">
-           <h2 class="abs-img abs-img-1">Therapist 💆🏻‍♀️</h2>
-            <h2 class="abs-img abs-img-2">Hi I'm your Therapist 👋🏻 </h2>
+           <h4 class="abs-img abs-img-1">Hi 👋🏻 </h4>
+            <h4 class="abs-img abs-img-2">I'm your Therapist 💆🏻‍♀️ </h4>
           </div>
         </div>
       </section>
 
-      <!--- #ABOUT-->
-    
-        <div class="container">
-
-          <div class="video-card has-before has-bg-image"
-            style="background-image: url('./assets/images/video-banner.jpg')">
-
-            <h2 class="h2 card-title">Explore Fitness Life</h2>
-
-            <button class="play-btn" aria-label="play video">
-              <ion-icon name="play-sharp" aria-hidden="true"></ion-icon>
-            </button>
-
-            <a href="#" class="btn-link has-before">Watch More</a>
-
-          </div>
-
-        </div>
-      </section> 
       
      <!-- COMMENTS -->
      <section class="section class has-bg-image" id="class" aria-label="class"
