--- a/contact.html
+++ b/contact.html
@@ -110,9 +110,9 @@
           </div>
 
           <div class="hero-banner">
-            <img class="contact-img" src="./assets/images/NoWalkin.png" alt="" width="660" height="753" class="w-100">
-            <p class="abs-img abs-img-1">Book Online 📆</p>
-            <p class="abs-img abs-img-2">No Walk-INS 🙅🏻‍♀️</p> 
+            <img class="contact-img" src="./assets/images/NoWalkin.webp" alt="" width="660" height="753" class="w-100">
+            <h4 class="abs-img abs-img-1">Book Online 📆</h4>
+            <h4 class="abs-img abs-img-2">No Walk-INS 🙅🏻‍♀️</h4> 
           </div>
 
           <div class="hero-content">
@@ -131,7 +131,7 @@
       <section class="section about" id="about" aria-label="about">
         <div class="container">
           <div class="about-banner">
-            <img src="./assets/images/FirstTime.png" width="660" height="648" loading="lazy" alt="about banner"
+            <img src="./assets/images/FirstTime.webp" width="660" height="648" loading="lazy" alt="about banner"
               class="w-100">
           </div>
   
@@ -142,8 +142,7 @@
           </div>
       </section>
 
-      <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
-        style="background-image: url('./assets/images/classes-bg.png')">
+      <section class="section class bg-dark has-bg-image" id="class" aria-label="class">
         <div class="container">
           <h2 class="h2 section-title text-center">Happy Customers 💆🏻‍♀️</h2>
           <p>Thank you for the great reviews 🙏🏻 We're thrilled to hear you enjoyed your massage session. Your satisfaction is our priority! We're delighted you felt relaxed and rejuvenated after your visit.We look forward to welcoming you back soon! </p>
