--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <!--- google font link-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <link
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
     rel="stylesheet">
@@ -112,7 +109,7 @@
       <section class="section video" aria-label="video">
         <div class="container">
           <div>
-            <h2 class="h2 section-title text-center ">Experience the Ultimate Relaxation</h2>
+            <h2 class="h2 text-center ">Experience the Ultimate Relaxation</h2>
             <video controls poster="./assets/images/wellness-banner.webp" class="video-player">
               <source src="./assets/videos/relax.mp4" type="video/mp4">
             </video> 
@@ -122,10 +119,9 @@
       </section>
 
       <!--- Treatments-->
-      <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
-        style="background-image: url('./assets/images/classes-bg.png')">
+      <section class="section class bg-dark has-bg-image" id="class" aria-label="class">
         <div class="container">
-          <h2 class="h2 section-title text-center">Treatments</h2>
+          <h2 class="h2  text-center">Treatments</h2>
           <p>Let's Relax Stockholm offers a variety of treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy
           and Hot coconut oil massage</p>
 
@@ -156,7 +152,7 @@
                     <div class="progress-wrapper">
                       <button style="margin-top: 10px;">
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary" >
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
                         Book Now
                       </a>
                       </button>
@@ -192,7 +188,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
                         Book Now
                       </a>
                       </button>
@@ -228,7 +224,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -262,7 +258,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -296,7 +292,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -330,7 +326,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -364,7 +360,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -398,7 +394,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
