--- a/treatments.html
+++ b/treatments.html
@@ -89,8 +89,7 @@
   <main>
     <article>
       <!--- #HERO-->
-      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('./assets/images/hero-bg.png')">
+      <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section>
         <div class="container">
           <div class="hero-content">
             <h2 class="hero-subtitle">Experience the  ultimate relaxation and wellness treatments.</h2>
@@ -117,16 +116,16 @@
           </div>
 
           <div class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
+            <img src="./assets/images/hero-banner.webp" width="660" height="753" alt="hero banner" class="w-100">
 
             <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
               class="circle circle-1">
             <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt=""
               class="circle circle-2">
             
-            <p class="abs-img abs-img-1">No Walk-INS 🙅🏻‍♀️</p>
+            <h4 class="abs-img abs-img-1">No Walk-INS 🙅🏻‍♀️</h4>
  
-            <p class="abs-img abs-img-2">Appointment Only 📆</p>
+            <h4 class="abs-img abs-img-2">Book online 📆</h4>
           </div>
         </div>
       </section>
@@ -170,7 +169,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -210,7 +209,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -248,7 +247,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
                         Book Now
                       </a>
                       </button>
@@ -290,7 +289,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>  
                     </div>
                   </div>
@@ -332,7 +331,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -371,7 +370,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                         <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
+                         <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
                          Book Now
                         </a>
                       </button>
@@ -410,7 +409,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -450,7 +449,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -491,7 +490,7 @@
                     <div class="progress-wrapper">
                       <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
+                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
