--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
             <h1 class="h1 hero-title">Let's Relax Stockholm</h1>
 
             <p class="section-text">
-              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins. We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
+              Welcome to Let's Relax Massage Stockholm, where your journey to a healthier, stress-free lifestyle begins.</p> 
+             <p class="section-text">
+              We specialize in providing personalized massage therapy and wellness solutions designed to rejuvenate your body, mind, and soul.
             </p>
 
             <P class="hero-subtitle">Our licensed therapists bring years of experience and specialize in various massage techniques, including Swedish, Deep tissue (Sports massage) and Yoga massage.</P>
