--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
                 <div class="card-content">
                   <div class="title-wrapper">
-                    <h3 class="h3 bg-dark">
+                    <h3 class="h3">
                       Sports Massage
                     </h3>
                   </div>
@@ -141,13 +141,13 @@
                     Sports massage (Deep tissue) is effective because of its technique - consisting of slower, stronger massage that stimulates deep into muscles.
                   </p> 
                   <a class="readMore" href="treatments.html #sportmassage">Read More...</a>
-                  <p class="card-price bg-dark">
+                  <p class="card-price ">
                       600 kr. (30 min)
                       1200 kr. (60 min)
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button class="bg-dark" style="margin-top: 10px;">
+                      <button>
                       <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary" >
                         <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
                         Book Now
