--- a/about.html
+++ b/about.html
@@ -79,12 +79,11 @@
         > 
         <div class="container">
           <div class="hero-content">
+            <h1 class="h1 hero-title">About Us</h1>
             <h2 class="hero-subtitle">Your Partner in Wellness and Relaxation</h2>
             <p class="hero-subtitle">
               <strong class="strong">The Best</strong>Massage and Wellness Hub
             </p>
-
-            <h1 class="h1 hero-title">About Us</h1>
 
             <p class="section-text">
               At Let's Relax Stockhom, we believe that wellness is more than a luxury—it's a lifestyle. Founded in Stockholm, our mission is to provide a sanctuary where you can escape the daily grind and embrace tranquility.
@@ -108,10 +107,9 @@
 
       
      <!-- COMMENTS -->
-     <section class="section class has-bg-image" id="class" aria-label="class"
-        style="background-image: url('./assets/images/classes-bg.png')">
+     <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
-          <h2 class="h2 section-title text-center">Happy Customers 💆🏻‍♀️</h2>
+          <h2 class="h2 bd-pink section-title text-center">Happy Customers 💆🏻‍♀️</h2>
           <p class="section-subtitle">Thank you for the great reviews 🙏🏻 We're thrilled to hear you enjoyed your massage session. Your satisfaction is our priority! We're delighted you felt relaxed and rejuvenated after your visit.We look forward to welcoming you back soon! </p>
 
           <!-- Google review -->
