--- a/index.html
+++ b/index.html
@@ -637,13 +637,14 @@
           <li class="footer-list-item">
             <div class="icon">
               <a href="contact.html#map">
-              <ion-icon name="location" aria-hidden="true"></ion-icon></a>
+              <ion-icon name="location" aria-hidden="true"></ion-icon>
             </div>
 
             <address class="address footer-link">
               Fridhemsgatan 28, 112 40 Stockholm, Sweden
               (Inside Danshuset)
             </address>
+            </a>
           </li>
 
           <li class="footer-list-item">
@@ -673,7 +674,16 @@
           </li>
 
           <li>
-            <div id="TA_selfserveprop612" class="TA_selfserveprop"><ul id="BW5Fht7U4K3" class="TA_links R7tpLWkA4"><li id="uUooLc" class="a6i5suQ8"><a target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g189852-d12631041-Reviews-Let_s_Relax_Stockholm-Stockholm.html"><img src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-11900-2.svg" alt="TripAdvisor"/></a></li></ul></div>
+            <div id="TA_selfserveprop612" class="TA_selfserveprop">
+              <ul id="BW5Fht7U4K3" class="TA_links R7tpLWkA4">
+              <li id="uUooLc" class="a6i5suQ8">
+              <a target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g189852-d12631041-Reviews-Let_s_Relax_Stockholm-Stockholm.html">
+              
+              <img src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-11900-2.svg" alt="TripAdvisor"/>
+              </a>
+              </li>
+            </ul>
+            </div>
           </li>
 
         </ul>
