--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
           <li class="footer-list-item">
             <div class="icon">
-              <a href="contact.html#map">
+              <a href="contact.html#map" aria-label="view map">
               <ion-icon name="location" aria-hidden="true"></ion-icon>
             </div>
 
@@ -649,22 +649,22 @@
 
           <li class="footer-list-item">
             <div class="icon">
-              <ion-icon name="call" aria-hidden="true"></ion-icon>
+            <a href="tel:+46700728686" class="footer-link" aria-label="call now">
+              <ion-icon name="call" aria-hidden="true">
+              </ion-icon>
             </div>
-
-            <div>
-              <a href="tel:+46700728686" class="footer-link">+46 70-072-8686</a>
-            </div>
+              +46 70-072-8686
+            </a>           
           </li>
 
           <li class="footer-list-item">
             <div class="icon">
-              <ion-icon name="mail" aria-hidden="true"></ion-icon>
+              <a href="mailto:letsrelaxsweden@gmail.com" class="footer-link" aria-label="email">
+                <ion-icon name="mail" aria-hidden="true">
+                </ion-icon>
             </div>
-
-            <div>
-              <a href="mailto:letsrelaxsweden@gmail.com" class="footer-link">letsrelaxsweden@gmail.com</a>
-            </div>
+              letsrelaxsweden@gmail.com
+              </a>
           </li>
         </ul>
 
