modified treatments page

--- a/treatments.html
+++ b/treatments.html
@@ -119,8 +119,7 @@
       </section>
 
       <!--- Treatments-->
-      <section class="section class has-bg-image" id="class" aria-label="class"
-        style="background-image: url('./assets/images/classes-bg.png')">
+      <section class="section class has-bg-image" id="class" aria-label="class">
         <div class="container">
           <h2 class="h2 section-title text-center">Welllness Treatments</h2>
           <p class="section-subtitle">Pamper yourself with our treatments such as Sports massages (Deep tissue), Reflexology (Foot), Office Syndrome (Back Head & Shoulders), Yoga massage, Aromatherapy and Hot coconut oil massage</p>
@@ -155,10 +154,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -195,10 +191,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -233,12 +226,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
-                        Book Now
-                      </a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -275,10 +263,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>  
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a> 
                     </div>
                   </div>
                   
@@ -317,10 +302,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -356,12 +338,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                         <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
-                         Book Now
-                        </a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -396,9 +373,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -435,10 +410,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
@@ -476,10 +448,7 @@
                   </p>
                   <div class="card-progress">
                     <div class="progress-wrapper">
-                      <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
-                        <img src="./assets/images/hero-banner.webp" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
-                      </button>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
                     </div>
                   </div>
                 </div>
